--- a/flutter-foundations/ecommerce_app/pubspec.yaml
+++ b/flutter-foundations/ecommerce_app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   flutter_layout_grid: ^2.0.7
   flutter_rating_bar: ^4.0.1
+  go_router: ^14.3.0
   intl: ^0.19.0
 
 dev_dependencies:
